@@ -15,8 +15,12 @@ defaults="defaults read /Library/Preferences/org.jenkins-ci"
 war=`$defaults war` || war="/Applications/Jenkins/jenkins.war"
 
 javaArgs=""
-heapSize=`$defaults heapSize` && javaArgs="$javaArgs -Xmx${heapSize}"
+
+minPermGen=`$defaults minPermGen` && javaArgs="$javaArgs -XX:PermSize=${minPermGen}"
 permGen=`$defaults permGen` && javaArgs="$javaArgs -XX:MaxPermSize=${permGen}"
+
+minHeapSize=`$defaults minHeapSize` && javaArgs="$javaArgs -Xms${minHeapSize}"
+heapSize=`$defaults heapSize` && javaArgs="$javaArgs -Xmx${heapSize}"
 
 home=`$defaults JENKINS_HOME` && export JENKINS_HOME="$home"
 
